# lightpms

./: .env.dev  .gitignore  README.md  docker-compose.yml  pyproject.toml
lightpms/api_client/: api_client.py  kraken_client.py
lightpms/config/: config_manager.py
lightpms/dao/: daos.py
lightpms/data_extractor/: data_extractor.py  transaction_extractor.py
lightpms/data_loader/: data_loader.py  transaction_loader.py
lightpms/data_transformer/: data_transformer.py  transaction_transformer.py
lightpms/etl/: etl.py  transaction_etl.py
lightpms/logger/: logger.py
lightpms/model/: models.py  models_tables.py
resources/sql/init/: 0_lightpms_dev.sql  0_lightpms_prod.sql
tests/: conftest.py
tests/api_client/: kraken_client_test.py
tests/data_extractor/: transaction_extractor_test.py
tests/data_transformer/: transaction_transformer_test.py
tests/etl/: transaction_etl_test.py
tests/model/: models_test.py
